--- a/qgis2web/index.html
+++ b/qgis2web/index.html
@@ -11,10 +11,10 @@
         <style>
         #map {
             width: 1321px;
-            height: 994px;
+            height: 955px;
         }
         </style>
-        <title></title>
+        <title>Dominica Sperm Whale Distrubution 2005 - 2018 and Bathymetry</title>
     </head>
     <body>
         <div id="map">
@@ -29,11 +29,11 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="data/whale_sighting_2.js"></script>
+        <script src="data/SpermWhaleSightings20052018_2.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[14.770474815272635,-62.57427760677206],[16.009181395252725,-60.87530289469023]]);
+        }).fitBounds([[14.348971159557491,-62.93702880160739],[16.673097355613816,-59.617743534672734]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var bounds_group = new L.featureGroup([]);
@@ -49,15 +49,16 @@
         });
         layer_GoogleHybrid_0;
         map.addLayer(layer_GoogleHybrid_0);
-        var img_new_depth1_1 = 'data/new_depth1_1.png';
-        var img_bounds_new_depth1_1 = [[14.950327324700623,-62.472981689551574],[15.905854638800848,-61.136954503773566]];
-        var layer_new_depth1_1 = new L.imageOverlay(img_new_depth1_1, img_bounds_new_depth1_1);
-        bounds_group.addLayer(layer_new_depth1_1);
-        map.addLayer(layer_new_depth1_1);
-        function pop_whale_sighting_2(feature, layer) {
+        var img_Bathymetrydepth_1 = 'data/Bathymetrydepth_1.png';
+        var img_bounds_Bathymetrydepth_1 = [[14.950327324700623,-62.472981689551574],[15.905854638800848,-61.136954503773566]];
+        var layer_Bathymetrydepth_1 = new L.imageOverlay(img_Bathymetrydepth_1, img_bounds_Bathymetrydepth_1);
+        bounds_group.addLayer(layer_Bathymetrydepth_1);
+        map.addLayer(layer_Bathymetrydepth_1);
+        function pop_SpermWhaleSightings20052018_2(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['species'] !== null ? Autolinker.link(String(feature.properties['species'])) : '') + '</td>\
+                        <th scope="row">species</th>\
+                        <td>' + (feature.properties['species'] !== null ? Autolinker.link(String(feature.properties['species'])) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['long'] !== null ? Autolinker.link(String(feature.properties['long'])) : '') + '</td>\
@@ -69,11 +70,11 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_whale_sighting_2_0() {
+        function style_SpermWhaleSightings20052018_2_0() {
             return {
-                pane: 'pane_whale_sighting_2',
+                pane: 'pane_SpermWhaleSightings20052018_2',
                 shape: 'diamond',
-                radius: 1.6000000000000005,
+                radius: 1.6,
                 stroke: false,
                 fill: true,
                 fillOpacity: 1,
@@ -81,26 +82,59 @@
                 interactive: true,
             }
         }
-        map.createPane('pane_whale_sighting_2');
-        map.getPane('pane_whale_sighting_2').style.zIndex = 402;
-        map.getPane('pane_whale_sighting_2').style['mix-blend-mode'] = 'normal';
-        var layer_whale_sighting_2 = new L.geoJson(json_whale_sighting_2, {
+        map.createPane('pane_SpermWhaleSightings20052018_2');
+        map.getPane('pane_SpermWhaleSightings20052018_2').style.zIndex = 402;
+        map.getPane('pane_SpermWhaleSightings20052018_2').style['mix-blend-mode'] = 'normal';
+        var layer_SpermWhaleSightings20052018_2 = new L.geoJson(json_SpermWhaleSightings20052018_2, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_whale_sighting_2',
-            layerName: 'layer_whale_sighting_2',
-            pane: 'pane_whale_sighting_2',
-            onEachFeature: pop_whale_sighting_2,
+            dataVar: 'json_SpermWhaleSightings20052018_2',
+            layerName: 'layer_SpermWhaleSightings20052018_2',
+            pane: 'pane_SpermWhaleSightings20052018_2',
+            onEachFeature: pop_SpermWhaleSightings20052018_2,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.shapeMarker(latlng, style_whale_sighting_2_0(feature));
+                return L.shapeMarker(latlng, style_SpermWhaleSightings20052018_2_0(feature));
             },
         });
-        bounds_group.addLayer(layer_whale_sighting_2);
-        map.addLayer(layer_whale_sighting_2);
+        bounds_group.addLayer(layer_SpermWhaleSightings20052018_2);
+        map.addLayer(layer_SpermWhaleSightings20052018_2);
+            var title = new L.Control();
+            title.onAdd = function (map) {
+                this._div = L.DomUtil.create('div', 'info');
+                this.update();
+                return this._div;
+            };
+            title.update = function () {
+                this._div.innerHTML = '<h2>Dominica Sperm Whale Distrubution 2005 - 2018 and Bathymetry</h2>';
+            };
+            title.addTo(map);
+            var abstract = new L.Control({'position':'bottomleft'});
+            abstract.onAdd = function (map) {
+                this._div = L.DomUtil.create('div',
+                'leaflet-control leaflet-bar abstract');
+                this._div.id = 'abstract'
+                    this._div.setAttribute("onmouseenter", "abstract.show()");
+                    this._div.setAttribute("onmouseleave", "abstract.hide()");
+                    this.hide();
+                    return this._div;
+                };
+                abstract.hide = function () {
+                    this._div.classList.remove("abstractUncollapsed");
+                    this._div.classList.add("abstract");
+                    this._div.innerHTML = 'i'
+                }
+                abstract.show = function () {
+                    this._div.classList.remove("abstract");
+                    this._div.classList.add("abstractUncollapsed");
+                    this._div.innerHTML = 'Dominica Sperm Whale Sightings from 2012-2018 and Bathymetry Depths<br />The red color scale will represent different depths: The lighter colors represent deeper depths with the deepest being -2816 meteres.The colors get darker as the depth gets shallower. The largest whale presence is in depths of -1000 to -1500 meters.<br />Source: Whale Sightings: Dominica Sperm Whale Project | Bathymetry GEBCO 2019 | Basemap: Google';
+            };
+            abstract.addTo(map);
+        var baseMaps = {};
+        L.control.layers(baseMaps,{'<img src="legend/SpermWhaleSightings20052018_2.png" /> Sperm Whale Sightings 2005-2018': layer_SpermWhaleSightings20052018_2,"Bathymetry (depth)": layer_Bathymetrydepth_1,"Google Hybrid": layer_GoogleHybrid_0,},{collapsed:false}).addTo(map);
         setBounds();
         L.ImageOverlay.include({
             getBounds: function () {
